# RWL_Intern

./: .gitignore  README.md
dh_workspace/: MarkdownBasics.md  github_clone_commit_push_pull.md
dh_workspace/MarkDown_and_Git/: MarkdownBasics.md  github_clone_commit_push_pull.md
dh_workspace/docker_cuda/: Dockerfile  Dockerfile_explanation
dh_workspace/docker_document_and_files/: Dockerfile  README.md  README2.md  docker-compose-custom.yml  docker-compose.yml  docker_doc.md
dh_workspace/python/: after_class.ipynb  class.ipynb  exception.ipynb  iterator_and_generator.ipynb  practice.ipynb  py_ex.ipynb
hnr_workspace/: Basic  readme.md
hnr_workspace/Basic/: Git_tutorial 2ee150d7700b805d9ee2fc540c762095.md  Git_tutorial.md  Weakly Supervised 3D Object Detection from Lidar P 2a9150d7700b80a49c33e5c8b0b5842d.md
hnr_workspace/Python/: chap_02.ipynb
hnr_workspace/Toy_project/: Dockerfile
mj_workspace/: .gitignore  readme.md
mj_workspace/basic/: git_guide.md  markdown_guide.md  vscode_guide.md
mj_workspace/dev_env_setting/: conda_setup.md
mj_workspace/python/: PEP_8.md
sh_workspace/: READEME.md  readme.md
sh_workspace/basic/: VSCode.md  git.md  markdown.md
sh_workspace/python/: PEP8.md
to_workspace/: readme.md
to_workspace/basic/: git.md  git_study.md  markdown.md  markdown_study.md  vscode.md  vscode_study.md
to_workspace/deep_learning/: 00_deep_learning_from_scratch.md  01_resnet_study.md  01_torch_basic.ipynb  01_toy_resnet_cifar10.ipynb  (+31 more)
to_workspace/dev_env_set/etc/: CMakeLists.txt  app.py  docker-compose.yml  dockerfile  run_inference.py
(+281 files in other folders)
